--- a/config.ttl.dist
+++ b/config.ttl.dist
@@ -21,16 +21,16 @@
     skosmos:sparqlEndpoint "http://localhost:3030/ds/sparql" ;
     # sparql-query extension, or "Generic" for plain SPARQL 1.1
     # set to "JenaText" instead if you use Fuseki with jena-text index
-    skosmos:sparqlDialect "JenaText" ;
+    skosmos:sparqlDialect "Generic" ;
     # whether to enable collation in sparql queries
     skosmos:sparqlCollationEnabled false ;
     # HTTP client configuration
     skosmos:sparqlTimeout 20 ;
-    skosmos:httpTimeout 20 ;
+    skosmos:httpTimeout 5 ;
     # customize the service name
     skosmos:serviceName "Skosmos" ;
     # customize the base element. Set this if the automatic base url detection doesn't work. For example setups behind a proxy.
-    skosmos:baseHref "http://localhost/Skosmos/" ;
+    # skosmos:baseHref "http://localhost/Skosmos/" ;
     # interface languages available, and the corresponding system locales
     skosmos:languages [ :name "fi" ; :value "fi_FI.utf8" ] ,
                 [ :name "sv" ; :value "sv_SE.utf8" ] ,
@@ -40,11 +40,11 @@
     # how many items (maximum) to retrieve in transitive property queries
     skosmos:transitiveLimit 1000 ;
     # whether or not to log caught exceptions
-    skosmos:logCaughtExceptions true ;
+    skosmos:logCaughtExceptions false ;
     # set to TRUE to enable logging into browser console
     skosmos:logBrowserConsole false ;
     # set to a logfile path to enable logging into log file
-    skosmos:logFileName "" ;
+    # skosmos:logFileName "" ;
     # a default location for Twig template rendering
     skosmos:templateCache "/tmp/skosmos-template-cache" ;
     # customize the css by adding your own stylesheet
