--- a/config.ttl.dist
+++ b/config.ttl.dist
@@ -16,115 +16,44 @@
 # Skosmos main configuration
 
 :config a skosmos:Configuration ;
-    # SPARQL endpoint
-    # a local Fuseki server is usually on localhost:3030
-    #skosmos:sparqlEndpoint <http://localhost:3030/ds/sparql> ;
-    # use the dev.finto.fi endpoint where the example vocabularies reside
-    skosmos:sparqlEndpoint <http://api.dev.finto.fi/sparql> ;
-    # sparql-query extension, or "Generic" for plain SPARQL 1.1
-    # set to "JenaText" instead if you use Fuseki with jena-text index
+    skosmos:sparqlEndpoint <http://data.silknow.org/sparql> ;
     skosmos:sparqlDialect "Generic" ;
-    # whether to enable collation in sparql queries
-    skosmos:sparqlCollationEnabled false ;
-    # HTTP client configuration
+    skosmos:sparqlCollationEnabled true ;
     skosmos:sparqlTimeout 20 ;
     skosmos:httpTimeout 5 ;
-    # customize the service name
     skosmos:serviceName "Skosmos" ;
-    # customize the base element. Set this if the automatic base url detection doesn't work. For example setups behind a proxy.
-    # skosmos:baseHref "http://localhost/Skosmos/" ;
-    # interface languages available, and the corresponding system locales
     skosmos:languages (
-        [ rdfs:label "fi" ; rdf:value "fi_FI.utf8" ]
-        [ rdfs:label "sv" ; rdf:value "sv_SE.utf8" ]
+        [ rdfs:label "es" ; rdf:value "es_ES.utf8" ]
         [ rdfs:label "en" ; rdf:value "en_GB.utf8" ]
     ) ;
-    # how many results (maximum) to load at a time on the search results page
     skosmos:searchResultsSize 20 ;
-    # how many items (maximum) to retrieve in transitive property queries
     skosmos:transitiveLimit 1000 ;
-    # whether or not to log caught exceptions
-    skosmos:logCaughtExceptions false ;
-    # set to TRUE to enable logging into browser console
-    skosmos:logBrowserConsole false ;
-    # set to a logfile path to enable logging into log file
-    # skosmos:logFileName "" ;
-    # a default location for Twig template rendering
+    skosmos:logCaughtExceptions true ;
+    skosmos:logBrowserConsole true ;
     skosmos:templateCache "/tmp/skosmos-template-cache" ;
-    # customize the css by adding your own stylesheet
-    skosmos:customCss "resource/css/stylesheet.css" ;
-    # default email address where to send the feedback
-    skosmos:feedbackAddress "" ;
-    # email address to set as the sender for feedback messages
-    skosmos:feedbackSender "" ;
-    # email address to set as the envelope sender for feedback messages
-    skosmos:feedbackEnvelopeSender "" ;
-    # whether to display the ui language selection as a dropdown (useful for cases where there are more than 3 languages) 
+    # skosmos:customCss "resource/css/stylesheet.css" ;
     skosmos:uiLanguageDropdown false ;
     # whether to enable the spam honey pot or not, enabled by default
     skosmos:uiHoneypotEnabled true ;
-    # default time a user must wait before submitting a form
     skosmos:uiHoneypotTime 5 ;
-    # plugins to activate for the whole installation (including all vocabularies)
     skosmos:globalPlugins () .
 
 # Skosmos vocabularies
 
-:ysa a skosmos:Vocabulary, void:Dataset ;
-    dc:title "YSA - Yleinen suomalainen asiasanasto"@fi,
-        "YSA - Allmän tesaurus på finska"@sv,
-        "YSA - General Finnish thesaurus"@en ;
+:thesaurus a skosmos:Vocabulary, void:Dataset ;
+    dc:title "SILK Thesaurus" ;
     dc:subject :cat_general ;
     dc:type mdrtype:THESAURUS ;
-    void:uriSpace "http://www.yso.fi/onto/ysa/";
-    skosmos:groupClass skos:Collection;
-    skosmos:language "fi";
-    skosmos:shortName "YSA";
-    skosmos:feedbackRecipient "vesa-posti@helsinki.fi" ;
-    skosmos:showChangeList "true" ;
-    void:dataDump <http://api.finto.fi/download/ysa/ysa-skos.ttl> ;
-    void:sparqlEndpoint <http://api.dev.finto.fi/sparql> ;
-    skosmos:sparqlGraph <http://www.yso.fi/onto/ysa/>
-.
-
-:yso a skosmos:Vocabulary, void:Dataset ;
-    dc:title "YSO - Yleinen suomalainen ontologia"@fi,
-        "ALLFO - Allmän finländsk ontologi"@sv,
-        "YSO - General Finnish ontology"@en ;
-    dc:subject :cat_general ;
-    dc:type mdrtype:ONTOLOGY ;
-    void:uriSpace "http://www.yso.fi/onto/yso/";
-    skosmos:language "fi", "sv", "en";
-    skosmos:defaultLanguage "fi";
-    skosmos:showTopConcepts "true";
-    skosmos:showStatistics "false";
-    skosmos:loadExternalResources "false";
-    skosmos:shortName "YSO",
-                    "ALLFO"@sv;
-    skosmos:groupClass isothes:ConceptGroup ;
-    skosmos:arrayClass isothes:ThesaurusArray ;
-    void:dataDump <http://api.finto.fi/download/yso/yso-skos.ttl> ;
-    void:sparqlEndpoint <http://api.dev.finto.fi/sparql> ;
-    skosmos:sparqlGraph <http://www.yso.fi/onto/yso/> ;
-    skosmos:mainConceptScheme <http://www.yso.fi/onto/yso/>
-.
-
-:categories a skos:ConceptScheme;
-    skos:prefLabel "Skosmos Vocabulary Categories"@en
-.
-
-:cat_general a skos:Concept ;
-    skos:topConceptOf :categories ;
-    skos:inScheme :categories ;
-    skos:prefLabel "Yleiskäsitteet"@fi,
-        "Allmänna begrepp"@sv,
-        "General concepts"@en
-.
-
-mdrtype:THESAURUS a skos:Concept ;
-    skos:prefLabel "Тезаурус"@bg, "Tezaurus"@cs, "Tesaurus"@da, "Thesaurus"@de, "Θησαυρός"@el, "Thesaurus"@en, "Tesaurus"@et, "Tesaurus"@fi, "Thésaurus"@fr, "Pojmovnik"@hr, "Tezaurusz"@hu, "Tesauro"@it, "Tēzaurs"@lv, "Tezauras"@lt, "Teżawru"@mt, "Thesaurus"@nl, "Tesaurus"@no, "Tezaurus"@pl, "Tesauro"@pt, "Tezaur"@ro, "Synonymický slovník"@sk, "Tezaver"@sl, "Tesauro"@es, "Tesaurus"@sv
-.
-
-mdrtype:ONTOLOGY a skos:Concept ;
-    skos:prefLabel "Онтология"@bg, "Ontologie"@cs, "Ontologi"@da, "Ontologie"@de, "Οντολογία"@el, "Ontology"@en, "Ontoloogia"@et, "Ontologia"@fi, "Ontologie"@fr, "Ontologija"@hr, "Ontológia"@hu, "Ontologia"@it, "Ontoloģija"@lv, "Ontologija"@lt, "Ontoloġija"@mt, "Ontologie"@nl, "Ontologi"@no, "Struktura pojęciowa"@pl, "Ontologia"@pt, "Ontologie"@ro, "Ontológia"@sk, "Ontologija"@sl, "Ontología"@es, "Ontologi"@sv
+    void:uriSpace "http://data.silknow.org/vocabulary/";
+    skosmos:languages "es", "en";
+    skosmos:defaultLanguage "es" ;
+    skosmos:hasMultiLingualProperty dc:bibliographicCitation ;
+    skosmos:shortName "SILK";
+    skosmos:showChangeList "false" ;
+    skosmos:showNotation "true" ;
+    skosmos:loadExternalResources "true" ;
+    skosmos:mainConceptScheme <http://data.silknow.org/vocabulary/silk-thesaurus> ;
+    void:sparqlEndpoint <http://data.silknow.org/sparql> ;
+    void:dataDump <https://github.com/silknow/thesaurus/blob/master/thesaurus.ttl> ;
+    skosmos:sparqlGraph <http://data.silknow.org/vocabulary>
 .
