--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 Options +FollowSymlinks -MultiViews -Indexes
 
 RewriteEngine on
+RewriteBase /skosmos
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^entity$ entity.php [L]
@@ -12,19 +13,19 @@ RewriteRule ^rest/v1/(.*)$ rest.php/$1 [L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond $0 !^resource/
-RewriteRule ^(.*)$ index.php/$1 [L] 
+RewriteRule ^(.*)$ index.php/$1 [L]
 
 RewriteCond $0 ^favicon.ico$
 RewriteCond custom-favicon.ico -F
-RewriteRule ^favicon.ico$ custom-favicon.ico [L] 
+RewriteRule ^favicon.ico$ custom-favicon.ico [L]
 
 <Files ~ "\.ttl$">
-    <IfModule mod_authz_core.c> 
-        # Apache 2.4 
+    <IfModule mod_authz_core.c>
+        # Apache 2.4
         Require all denied
-    </IfModule> 
-    <IfModule !mod_authz_core.c> 
-        Order allow,deny 
-        Deny from all 
-    </IfModule> 
+    </IfModule>
+    <IfModule !mod_authz_core.c>
+        Order allow,deny
+        Deny from all
+    </IfModule>
 </Files>
